# Quality-Quest

./: README.md
Data/: Pump_Sensor.ino  Serial.py  sensor_log_2025-04-16_16-22-58.csv  sensor_log_2025-04-16_17-02-40.csv  sensor_log_2025-04-16_17-06-22.csv  sensor_log_2025-04-16_17-36-31.csv  sensor_log_2025-04-16_17-38-15.csv  sensor_log_2025-04-16_17-42-19.csv  sensor_log_2025-04-16_17-45-36.csv  test_serial.py
Rover/: Combined _code.py  Mater.py  Rover.py  Servo.py  Test.py  Waypoint.py  flight_mode.py
RoverAutonomy/: avoidancePC_1.1.py  avoidancePC_1.2.py  rover_h.py
RoverAutonomy/examples/: vehicletrajectory.py  yolo_w_zed.py
RoverAutonomy/old/: avoidancePC_1.0.py  avoidancePC_1.1.py  avoidanceYOLO.py
RoverAutonomy/testing/: arm_status.py  droneStuff.py  recordData.py  replayData.py  steering.py
SerialTest/: CMakeLists.txt  makefilecpp  runTest
SerialTest/src/: .serial_comm.cpp.swp  serial_comm.cpp
